# python-sdk

./: pyproject.toml
tests/: test_entity_store.py  url_list.txt
wordlift_sdk/graphql/: __init__.py  graphql_client_factory.py
wordlift_sdk/kg/: __init__.py  entity.py  entity_store.py  entity_store_factory.py
wordlift_sdk/utils/: __init__.py  create_dataframe_from_google_sheet.py  create_dataframe_from_google_sheets.py  create_dataframe_of_url_id.py  create_entity_patch_request.py
