[tool.poetry]
name = "wordlift-sdk"
version = "0.8.0"
description = ""
authors = ["David Riccitelli <david@wordlift.io>"]
readme = "README.md"
packages = [{ include = "wordlift_sdk/" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
gql = "^3.5.0"
tenacity = "^9.0.0"
aiohttp = "^3.10.5"
# Google Colab requires pandas 2.1.4
pandas = ">=2.1.4, <2.3.0"
rdflib = "^7.0.0"
wordlift-client = "^1.52.0"
gspread = "^6.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# see https://github.com/pytest-dev/pytest-asyncio/issues/924#issuecomment-2321921915
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"